--- a/Workshop 1 - Athens/Adv2_HuiWalter.html
+++ b/Workshop 1 - Athens/Adv2_HuiWalter.html
@@ -412,7 +412,7 @@ summary {
 <h2>Hui-Walter Model</h2>
 <ul>
 <li><p>A particular model formulation that was originally designed for evaluating diagnostic tests in the absence of a gold standard</p></li>
-<li><p>Not necessarily (or originally) Bayesian but now usually implemented using Bayesian MCMC</p></li>
+<li><p>Not necessarily (or originally) Bayesian but often implemented using Bayesian MCMC</p></li>
 <li><p>But evaluating an imperfect test against another imperfect test is a bit like pulling a rabbit out of a hat</p>
 <ul>
 <li>If we don’t know the true disease status, how can we estimate sensitivity or specificity for either test?</li>
@@ -480,75 +480,75 @@ results &lt;- run.jags(&#39;basic_hw.bug&#39;, n.chains=2)</code></pre>
 <tbody>
 <tr class="odd">
 <td>prev</td>
-<td align="right">0.309</td>
-<td align="right">0.441</td>
-<td align="right">0.576</td>
-<td align="right">3807</td>
-<td align="right">1.000</td>
+<td align="right">0.334</td>
+<td align="right">0.501</td>
+<td align="right">0.673</td>
+<td align="right">3674</td>
+<td align="right">2.264</td>
 </tr>
 <tr class="even">
 <td>prob[1]</td>
 <td align="right">0.365</td>
 <td align="right">0.462</td>
-<td align="right">0.557</td>
-<td align="right">13771</td>
+<td align="right">0.556</td>
+<td align="right">13820</td>
 <td align="right">1.000</td>
 </tr>
 <tr class="odd">
 <td>prob[2]</td>
 <td align="right">0.073</td>
 <td align="right">0.133</td>
-<td align="right">0.204</td>
-<td align="right">13341</td>
+<td align="right">0.203</td>
+<td align="right">13300</td>
 <td align="right">1.000</td>
 </tr>
 <tr class="even">
 <td>prob[3]</td>
-<td align="right">0.019</td>
+<td align="right">0.018</td>
 <td align="right">0.055</td>
-<td align="right">0.104</td>
-<td align="right">8997</td>
+<td align="right">0.103</td>
+<td align="right">9462</td>
 <td align="right">1.000</td>
 </tr>
 <tr class="odd">
 <td>prob[4]</td>
-<td align="right">0.253</td>
-<td align="right">0.343</td>
-<td align="right">0.435</td>
-<td align="right">12976</td>
+<td align="right">0.258</td>
+<td align="right">0.344</td>
+<td align="right">0.440</td>
+<td align="right">13092</td>
 <td align="right">1.000</td>
 </tr>
 <tr class="even">
 <td>se[1]</td>
-<td align="right">0.820</td>
-<td align="right">0.931</td>
+<td align="right">0.028</td>
+<td align="right">0.550</td>
 <td align="right">1.000</td>
-<td align="right">5555</td>
-<td align="right">1.001</td>
+<td align="right">4349</td>
+<td align="right">15.221</td>
 </tr>
 <tr class="odd">
 <td>se[2]</td>
-<td align="right">0.688</td>
-<td align="right">0.847</td>
-<td align="right">1.000</td>
-<td align="right">3250</td>
-<td align="right">1.000</td>
+<td align="right">0.000</td>
+<td align="right">0.425</td>
+<td align="right">0.966</td>
+<td align="right">4067</td>
+<td align="right">13.349</td>
 </tr>
 <tr class="even">
 <td>sp[1]</td>
-<td align="right">0.745</td>
-<td align="right">0.877</td>
-<td align="right">1.000</td>
-<td align="right">3293</td>
-<td align="right">1.000</td>
+<td align="right">0.000</td>
+<td align="right">0.489</td>
+<td align="right">0.973</td>
+<td align="right">4498</td>
+<td align="right">15.106</td>
 </tr>
 <tr class="odd">
 <td>sp[2]</td>
-<td align="right">0.862</td>
-<td align="right">0.949</td>
+<td align="right">0.034</td>
+<td align="right">0.577</td>
 <td align="right">1.000</td>
-<td align="right">5740</td>
-<td align="right">1.000</td>
+<td align="right">4370</td>
+<td align="right">13.704</td>
 </tr>
 </tbody>
 </table>
@@ -678,28 +678,28 @@ results &lt;- run.jags(&#39;basic_hw.bug&#39;, n.chains=2)</code></pre>
 ## JAGS model summary statistics from 20000 samples (chains = 2; adapt+burnin = 5000):
 ##                                                                                
 ##          Lower95   Median Upper95     Mean       SD     Mode      MCerr MC%ofSD
-## prev     0.36351  0.48153 0.60444   0.4823 0.062509  0.47702   0.000863     1.4
-## prob[1]  0.33789  0.43126 0.52815  0.43118 0.048659  0.43268 0.00042733     0.9
-## prob[2] 0.051658  0.10451 0.16707  0.10684 0.030185   0.1013 0.00025984     0.9
-## prob[3] 0.017319 0.055772 0.10425 0.058741 0.023487 0.051723 0.00024512       1
-## prob[4]  0.31283  0.40282 0.49963  0.40324 0.048147  0.39909 0.00041673     0.9
-## se[1]    0.84444  0.94336       1  0.93475 0.047378  0.97198  0.0006484     1.4
-## se[2]    0.76375  0.89675 0.99999  0.89025 0.069916  0.92147  0.0011295     1.6
-## sp[1]    0.76972  0.89189 0.99996  0.88789 0.067847  0.89343   0.001086     1.6
-## sp[2]    0.84876  0.94235       1   0.9346 0.045849  0.96882 0.00062365     1.4
-##                                 
-##         SSeff      AC.10    psrf
-## prev     5247   0.032717  1.0001
-## prob[1] 12965 0.00066108  1.0001
-## prob[2] 13495  0.0082185  1.0006
-## prob[3]  9181   -0.01148  1.0003
-## prob[4] 13349  0.0051328 0.99997
-## se[1]    5339   0.033332 0.99995
-## se[2]    3832   0.040483  1.0003
-## sp[1]    3903   0.032107 0.99999
-## sp[2]    5405   0.017711  1.0005
+## prev     0.36567  0.48414 0.60944  0.48434  0.06241  0.48664 0.00083857     1.3
+## prob[1]  0.33444  0.43061 0.52713  0.43102 0.049024  0.42829 0.00042091     0.9
+## prob[2] 0.050094  0.10433 0.16661  0.10693 0.030321  0.10176 0.00027023     0.9
+## prob[3] 0.018994 0.055853 0.10517 0.058729 0.023005 0.051482 0.00022735       1
+## prob[4]  0.30715  0.40266 0.49614  0.40332 0.048382  0.39756 0.00042319     0.9
+## se[1]     0.8454  0.94198       1  0.93391 0.046554  0.96745 0.00060697     1.3
+## se[2]     0.7654  0.89258 0.99999  0.88762 0.069297  0.90909   0.001086     1.6
+## sp[1]    0.77035  0.89557 0.99999  0.88988  0.06768    0.915   0.001036     1.5
+## sp[2]    0.85123  0.94215       1   0.9354 0.044859  0.96769 0.00056768     1.3
+##                                
+##         SSeff      AC.10   psrf
+## prev     5539   0.014959      1
+## prob[1] 13565  -0.006059 1.0003
+## prob[2] 12590   0.005683 1.0006
+## prob[3] 10239 -0.0032701      1
+## prob[4] 13071 0.00089049      1
+## se[1]    5883 0.00028252 1.0009
+## se[2]    4072   0.025105      1
+## sp[1]    4268   0.010187 1.0007
+## sp[2]    6245   0.014284 1.0004
 ## 
-## Total time taken: 1.6 seconds</code></pre>
+## Total time taken: 1.3 seconds</code></pre>
 <p>How well do we recover our parameters?</p>
 <pre class="r"><code>se1</code></pre>
 <pre><code>## [1] 0.9</code></pre>
@@ -738,28 +738,28 @@ HPSe</code></pre>
 <pre class="r"><code>results</code></pre>
 <pre><code>## 
 ## JAGS model summary statistics from 20000 samples (chains = 2; adapt+burnin = 5000):
-##                                                                                
-##          Lower95   Median Upper95     Mean       SD     Mode      MCerr MC%ofSD
-## prev     0.40885  0.51929 0.62278  0.51872  0.05519  0.51951 0.00054924       1
-## prob[1]  0.34701  0.44092 0.53666  0.44158 0.048911  0.43613 0.00045932     0.9
-## prob[2] 0.044292 0.093751  0.1537 0.096365 0.028847 0.089606 0.00028856       1
-## prob[3]  0.03012 0.060363 0.10053 0.063078  0.01889  0.05597 0.00021566     1.1
-## prob[4]  0.31122  0.39903 0.49074  0.39898 0.045911  0.39941 0.00039104     0.9
-## se[1]     0.8666  0.90925 0.94496  0.90803 0.020363  0.91089 0.00019356       1
-## se[2]    0.73075  0.84962 0.96058  0.84596 0.059644  0.85588 0.00061024       1
-## sp[1]    0.92252  0.95056  0.9756  0.94945 0.013862  0.95192 0.00013424       1
-## sp[2]    0.87624   0.9596       1  0.95086 0.038724  0.98063 0.00049426     1.3
-##                                 
-##         SSeff      AC.10    psrf
-## prev    10097   0.007675  1.0009
-## prob[1] 11339  0.0071433  1.0005
-## prob[2]  9994  0.0024231 0.99995
-## prob[3]  7672 -0.0041369  1.0002
-## prob[4] 13784  0.0071098  1.0002
-## se[1]   11068 -0.0016268       1
-## se[2]    9553  0.0073401  1.0001
-## sp[1]   10662  0.0053575  1.0003
-## sp[2]    6138 -0.0017201  1.0003
+##                                                                         
+##          Lower95   Median  Upper95     Mean       SD     Mode      MCerr
+## prev     0.41464  0.51941  0.62677  0.51956 0.054656  0.51905 0.00052794
+## prob[1]  0.34292   0.4415  0.53272  0.44154  0.04861  0.43982 0.00043894
+## prob[2]  0.04283  0.09373    0.153 0.096528 0.028745 0.088757 0.00027816
+## prob[3] 0.029338 0.059836 0.099735 0.062624 0.018744 0.056151 0.00021514
+## prob[4]  0.31145  0.39854  0.49061  0.39931 0.045832  0.39399 0.00039447
+## se[1]     0.8647  0.90931   0.9446  0.90783 0.020534   0.9118 0.00019622
+## se[2]    0.72627  0.84912  0.95501  0.84546 0.059286   0.8558 0.00059127
+## sp[1]    0.92297  0.95084  0.97514   0.9497 0.013641  0.95206 0.00013878
+## sp[2]    0.87715  0.96092        1  0.95204 0.038257  0.98106 0.00049209
+##                                         
+##         MC%ofSD SSeff       AC.10   psrf
+## prev          1 10718   0.0038816 1.0004
+## prob[1]     0.9 12264 0.000092156 1.0002
+## prob[2]       1 10679 -0.00081631 1.0006
+## prob[3]     1.1  7591    0.015256 1.0002
+## prob[4]     0.9 13499   0.0050332 1.0002
+## se[1]         1 10951  -0.0059384      1
+## se[2]         1 10054 -0.00061516 1.0002
+## sp[1]         1  9661  -0.0056626 1.0001
+## sp[2]       1.3  6044    0.015822 1.0006
 ## 
 ## Total time taken: 1.1 seconds</code></pre>
 <p>How well do we recover our parameters for test 2?</p>
@@ -789,8 +789,8 @@ qbeta(c(0.025, 0.5, 0.975), 240.03, 12.63)</code></pre>
 <li><p>Basically an extension of the single-population model</p></li>
 <li><p>Works best with multiple populations each with differing prevalences</p>
 <ul>
-<li>These could even be subgroups of individuals within the same population if there are e.g. known risk factors for disease status</li>
-<li>Remember that the focus is usually to estimate the diagnostic test parameters and not the prevalence in the different populations/subgroups!</li>
+<li>Including an unexposed population works well</li>
+<li>BUT be wary of assumptions regarding constant sensitivity/specificity across populations with very different types of infections</li>
 </ul></li>
 </ul>
 </div>
@@ -959,59 +959,59 @@ results</code></pre>
 <tbody>
 <tr class="odd">
 <td>se[1]</td>
-<td align="right">0.757</td>
-<td align="right">0.866</td>
-<td align="right">0.961</td>
-<td align="right">9710</td>
-<td align="right">1.000</td>
+<td align="right">0.754</td>
+<td align="right">0.865</td>
+<td align="right">0.958</td>
+<td align="right">9845</td>
+<td align="right">1</td>
 </tr>
 <tr class="even">
 <td>se[2]</td>
-<td align="right">0.772</td>
-<td align="right">0.895</td>
+<td align="right">0.773</td>
+<td align="right">0.896</td>
 <td align="right">1.000</td>
-<td align="right">6708</td>
-<td align="right">1.000</td>
+<td align="right">6058</td>
+<td align="right">1</td>
 </tr>
 <tr class="odd">
 <td>sp[1]</td>
-<td align="right">0.761</td>
-<td align="right">0.870</td>
-<td align="right">0.965</td>
-<td align="right">8169</td>
-<td align="right">1.000</td>
+<td align="right">0.756</td>
+<td align="right">0.869</td>
+<td align="right">0.962</td>
+<td align="right">7403</td>
+<td align="right">1</td>
 </tr>
 <tr class="even">
 <td>sp[2]</td>
-<td align="right">0.927</td>
-<td align="right">0.982</td>
+<td align="right">0.926</td>
+<td align="right">0.983</td>
 <td align="right">1.000</td>
-<td align="right">4374</td>
-<td align="right">1.002</td>
+<td align="right">3928</td>
+<td align="right">1</td>
 </tr>
 <tr class="odd">
 <td>prev[1]</td>
 <td align="right">0.000</td>
-<td align="right">0.056</td>
-<td align="right">0.157</td>
-<td align="right">6234</td>
-<td align="right">1.001</td>
+<td align="right">0.057</td>
+<td align="right">0.161</td>
+<td align="right">5906</td>
+<td align="right">1</td>
 </tr>
 <tr class="even">
 <td>prev[2]</td>
-<td align="right">0.264</td>
-<td align="right">0.428</td>
-<td align="right">0.601</td>
-<td align="right">10301</td>
-<td align="right">1.000</td>
+<td align="right">0.265</td>
+<td align="right">0.427</td>
+<td align="right">0.598</td>
+<td align="right">10408</td>
+<td align="right">1</td>
 </tr>
 <tr class="odd">
 <td>prev[3]</td>
-<td align="right">0.698</td>
-<td align="right">0.851</td>
-<td align="right">0.978</td>
-<td align="right">8170</td>
-<td align="right">1.000</td>
+<td align="right">0.695</td>
+<td align="right">0.850</td>
+<td align="right">0.974</td>
+<td align="right">8364</td>
+<td align="right">1</td>
 </tr>
 <tr class="even">
 <td>covse12</td>
@@ -1098,28 +1098,28 @@ glm_results &lt;- run.jags(&#39;glm_hw.bug&#39;, n.chains=2, data=simdata)</code
 <pre><code>## Results from the HW model:</code></pre>
 <pre><code>## 
 ## JAGS model summary statistics from 20000 samples (chains = 2; adapt+burnin = 5000):
-##                                                                          
-##            Lower95   Median Upper95     Mean       SD     Mode      MCerr
-## se[1]      0.75661  0.86552 0.96069  0.86024 0.054327  0.87779 0.00055133
-## se[2]      0.77246  0.89548 0.99971  0.88843 0.062548  0.90559 0.00076368
-## sp[1]      0.76057  0.86953 0.96475  0.86522 0.053593  0.87914 0.00059297
-## sp[2]      0.92657  0.98243       1  0.97517 0.023939  0.99205 0.00036197
-## prev[1] 0.00008466 0.056016 0.15731 0.066329 0.047648 0.039011 0.00060348
-## prev[2]    0.26381  0.42805 0.60126  0.42958 0.086678  0.42373 0.00085402
-## prev[3]    0.69827  0.85111 0.97778  0.84349 0.073867  0.86619 0.00081723
-## covse12          0        0       0        0        0        0         --
-## covsp12          0        0       0        0        0        0         --
+##                                                                           
+##             Lower95   Median Upper95     Mean       SD     Mode      MCerr
+## se[1]       0.75362  0.86534 0.95753  0.86001 0.054096  0.87221  0.0005452
+## se[2]       0.77341  0.89562 0.99996  0.88819 0.062709  0.90917 0.00080567
+## sp[1]       0.75618  0.86906 0.96185  0.86482 0.053436  0.87627 0.00062107
+## sp[2]       0.92566  0.98252       1  0.97503 0.024572  0.99222 0.00039208
+## prev[1] 0.000029274 0.056609  0.1611 0.067537 0.048525 0.038475 0.00063143
+## prev[2]     0.26542  0.42727 0.59821  0.42926 0.086448  0.42339 0.00084736
+## prev[3]     0.69537  0.85047 0.97391  0.84275 0.074392  0.86892 0.00081346
+## covse12           0        0       0        0        0        0         --
+## covsp12           0        0       0        0        0        0         --
 ##                                         
-##         MC%ofSD SSeff      AC.10    psrf
-## se[1]         1  9710  0.0074728       1
-## se[2]       1.2  6708  0.0047638       1
-## sp[1]       1.1  8169 -0.0028703  1.0004
-## sp[2]       1.5  4374   0.023677  1.0015
-## prev[1]     1.3  6234  0.0037997  1.0005
-## prev[2]       1 10301  0.0037779  1.0002
-## prev[3]     1.1  8170   0.014026 0.99996
-## covse12      --    --         --      --
-## covsp12      --    --         --      --
+##         MC%ofSD SSeff       AC.10   psrf
+## se[1]         1  9845 -0.00028924 1.0001
+## se[2]       1.3  6058    0.011045 1.0002
+## sp[1]       1.2  7403    0.011622      1
+## sp[2]       1.6  3928    0.034015 1.0003
+## prev[1]     1.3  5906    0.021416 1.0002
+## prev[2]       1 10408   0.0079417 1.0003
+## prev[3]     1.1  8364  -0.0013036 1.0001
+## covse12      --    --          --     --
+## covsp12      --    --          --     --
 ## 
 ## Total time taken: 1.4 seconds</code></pre>
 <pre><code>## Results from the GLM model:</code></pre>
@@ -1127,26 +1127,26 @@ glm_results &lt;- run.jags(&#39;glm_hw.bug&#39;, n.chains=2, data=simdata)</code
 ## JAGS model summary statistics from 20000 samples (chains = 2; adapt+burnin = 5000):
 ##                                                                      
 ##                      Lower95  Median Upper95    Mean       SD    Mode
-## intercept             -3.791 -2.4354  -1.229 -2.4659  0.66243 -2.3566
+## intercept            -3.7433 -2.3826  -1.186 -2.4246  0.66153 -2.3174
 ## population_effect[1]       0       0       0       0        0       0
-## population_effect[2] 0.74713  2.1107  3.5878  2.1355  0.73403  2.0111
-## population_effect[3]  2.6327  4.3727  6.3117  4.4399  0.95905   4.298
-## se[1]                 0.7468 0.86334 0.95583  0.8579 0.055316 0.87469
-## se[2]                0.76207 0.88702 0.99992 0.88049 0.064757 0.89996
-## sp[1]                 0.7635  0.8735 0.96669 0.86949 0.053269 0.88317
-## sp[2]                0.93136  0.9836       1 0.97678  0.02231 0.99272
+## population_effect[2] 0.66025  2.0639  3.5001  2.0937  0.72721  2.0341
+## population_effect[3]  2.6105  4.3386  6.3345  4.4157  0.99018  4.2809
+## se[1]                  0.746  0.8622 0.95308 0.85648 0.055081 0.87008
+## se[2]                0.75731 0.88514  0.9998 0.87789 0.066048 0.89623
+## sp[1]                0.76077 0.87499 0.96872 0.87053 0.054119 0.88216
+## sp[2]                0.92897 0.98279       1 0.97579 0.023332 0.99232
 ##                                                                 
 ##                           MCerr MC%ofSD SSeff      AC.10    psrf
-## intercept              0.018113     2.7  1338    0.25239  1.0004
+## intercept              0.018095     2.7  1337    0.25906  1.0051
 ## population_effect[1]         --      --    --         --      --
-## population_effect[2]   0.019133     2.6  1472    0.24113  1.0002
-## population_effect[3]   0.018528     1.9  2679   0.099241 0.99996
-## se[1]                0.00056401       1  9619 0.00075449  1.0007
-## se[2]                0.00079574     1.2  6623  -0.019981       1
-## sp[1]                0.00059678     1.1  7967 -0.0058289  1.0002
-## sp[2]                0.00033709     1.5  4380  0.0083581  1.0005
+## population_effect[2]   0.018963     2.6  1471    0.24309  1.0044
+## population_effect[3]   0.020453     2.1  2344    0.14213  1.0012
+## se[1]                0.00058084     1.1  8993   0.016599  1.0001
+## se[2]                0.00083603     1.3  6241 -0.0028205 0.99995
+## sp[1]                0.00062278     1.2  7551  0.0032391  1.0001
+## sp[2]                0.00036747     1.6  4031  0.0090495  1.0003
 ## 
-## Total time taken: 6.2 seconds</code></pre>
+## Total time taken: 5.7 seconds</code></pre>
 <p>Note: this model could be used as the basis for adding covariates</p>
 <p>For a handy way to generate a GLM model see runjags::template.jags</p>
 <ul>
