--- a/Workshop 1 - Athens/Adv2_HuiWalter.html
+++ b/Workshop 1 - Athens/Adv2_HuiWalter.html
@@ -480,75 +480,75 @@ results &lt;- run.jags(&#39;basic_hw.bug&#39;, n.chains=2)</code></pre>
 <tbody>
 <tr class="odd">
 <td>prev</td>
-<td align="right">0.334</td>
-<td align="right">0.501</td>
-<td align="right">0.673</td>
-<td align="right">3674</td>
-<td align="right">2.264</td>
+<td align="right">0.314</td>
+<td align="right">0.441</td>
+<td align="right">0.579</td>
+<td align="right">4007</td>
+<td align="right">1.001</td>
 </tr>
 <tr class="even">
 <td>prob[1]</td>
-<td align="right">0.365</td>
-<td align="right">0.462</td>
-<td align="right">0.556</td>
-<td align="right">13820</td>
+<td align="right">0.364</td>
+<td align="right">0.461</td>
+<td align="right">0.557</td>
+<td align="right">13835</td>
 <td align="right">1.000</td>
 </tr>
 <tr class="odd">
 <td>prob[2]</td>
-<td align="right">0.073</td>
-<td align="right">0.133</td>
-<td align="right">0.203</td>
-<td align="right">13300</td>
+<td align="right">0.071</td>
+<td align="right">0.132</td>
+<td align="right">0.201</td>
+<td align="right">13618</td>
 <td align="right">1.000</td>
 </tr>
 <tr class="even">
 <td>prob[3]</td>
-<td align="right">0.018</td>
+<td align="right">0.017</td>
 <td align="right">0.055</td>
 <td align="right">0.103</td>
-<td align="right">9462</td>
+<td align="right">9464</td>
 <td align="right">1.000</td>
 </tr>
 <tr class="odd">
 <td>prob[4]</td>
-<td align="right">0.258</td>
+<td align="right">0.255</td>
 <td align="right">0.344</td>
-<td align="right">0.440</td>
-<td align="right">13092</td>
+<td align="right">0.437</td>
+<td align="right">14446</td>
 <td align="right">1.000</td>
 </tr>
 <tr class="even">
 <td>se[1]</td>
-<td align="right">0.028</td>
-<td align="right">0.550</td>
+<td align="right">0.824</td>
+<td align="right">0.933</td>
 <td align="right">1.000</td>
-<td align="right">4349</td>
-<td align="right">15.221</td>
+<td align="right">6095</td>
+<td align="right">1.000</td>
 </tr>
 <tr class="odd">
 <td>se[2]</td>
-<td align="right">0.000</td>
-<td align="right">0.425</td>
-<td align="right">0.966</td>
-<td align="right">4067</td>
-<td align="right">13.349</td>
+<td align="right">0.686</td>
+<td align="right">0.846</td>
+<td align="right">1.000</td>
+<td align="right">3321</td>
+<td align="right">1.002</td>
 </tr>
 <tr class="even">
 <td>sp[1]</td>
-<td align="right">0.000</td>
-<td align="right">0.489</td>
-<td align="right">0.973</td>
-<td align="right">4498</td>
-<td align="right">15.106</td>
+<td align="right">0.747</td>
+<td align="right">0.878</td>
+<td align="right">1.000</td>
+<td align="right">3321</td>
+<td align="right">1.001</td>
 </tr>
 <tr class="odd">
 <td>sp[2]</td>
-<td align="right">0.034</td>
-<td align="right">0.577</td>
+<td align="right">0.859</td>
+<td align="right">0.947</td>
 <td align="right">1.000</td>
-<td align="right">4370</td>
-<td align="right">13.704</td>
+<td align="right">5314</td>
+<td align="right">1.000</td>
 </tr>
 </tbody>
 </table>
@@ -678,26 +678,26 @@ results &lt;- run.jags(&#39;basic_hw.bug&#39;, n.chains=2)</code></pre>
 ## JAGS model summary statistics from 20000 samples (chains = 2; adapt+burnin = 5000):
 ##                                                                                
 ##          Lower95   Median Upper95     Mean       SD     Mode      MCerr MC%ofSD
-## prev     0.36567  0.48414 0.60944  0.48434  0.06241  0.48664 0.00083857     1.3
-## prob[1]  0.33444  0.43061 0.52713  0.43102 0.049024  0.42829 0.00042091     0.9
-## prob[2] 0.050094  0.10433 0.16661  0.10693 0.030321  0.10176 0.00027023     0.9
-## prob[3] 0.018994 0.055853 0.10517 0.058729 0.023005 0.051482 0.00022735       1
-## prob[4]  0.30715  0.40266 0.49614  0.40332 0.048382  0.39756 0.00042319     0.9
-## se[1]     0.8454  0.94198       1  0.93391 0.046554  0.96745 0.00060697     1.3
-## se[2]     0.7654  0.89258 0.99999  0.88762 0.069297  0.90909   0.001086     1.6
-## sp[1]    0.77035  0.89557 0.99999  0.88988  0.06768    0.915   0.001036     1.5
-## sp[2]    0.85123  0.94215       1   0.9354 0.044859  0.96769 0.00056768     1.3
-##                                
-##         SSeff      AC.10   psrf
-## prev     5539   0.014959      1
-## prob[1] 13565  -0.006059 1.0003
-## prob[2] 12590   0.005683 1.0006
-## prob[3] 10239 -0.0032701      1
-## prob[4] 13071 0.00089049      1
-## se[1]    5883 0.00028252 1.0009
-## se[2]    4072   0.025105      1
-## sp[1]    4268   0.010187 1.0007
-## sp[2]    6245   0.014284 1.0004
+## prev     0.36319  0.48193 0.60246  0.48192 0.061922  0.48267 0.00082058     1.3
+## prob[1]  0.33624  0.43016 0.52669  0.43096 0.048735  0.43082 0.00041896     0.9
+## prob[2] 0.050136  0.10456 0.16657  0.10711 0.030473  0.10243 0.00027449     0.9
+## prob[3] 0.018319 0.055944  0.1046 0.058703 0.023185 0.050211 0.00023904       1
+## prob[4]  0.30876   0.4025 0.49677  0.40323 0.048349  0.39934  0.0004175     0.9
+## se[1]    0.84242   0.9418 0.99999  0.93336 0.047399  0.96635  0.0006351     1.3
+## se[2]    0.77001  0.89818       1  0.89204  0.06862  0.93217  0.0010617     1.5
+## sp[1]    0.76432  0.88992 0.99998  0.88529 0.068387  0.89516  0.0010667     1.6
+## sp[2]    0.85154  0.94359       1  0.93596 0.045148  0.96888 0.00059442     1.3
+##                               
+##         SSeff     AC.10   psrf
+## prev     5694  0.023363 1.0002
+## prob[1] 13531  0.011611 1.0002
+## prob[2] 12325 0.0045005 1.0001
+## prob[3]  9407 0.0029745      1
+## prob[4] 13411 0.0092136 1.0001
+## se[1]    5570 -0.003579 1.0004
+## se[2]    4177  0.034713      1
+## sp[1]    4110  0.030449 1.0005
+## sp[2]    5769 0.0021658 1.0003
 ## 
 ## Total time taken: 1.3 seconds</code></pre>
 <p>How well do we recover our parameters?</p>
@@ -738,28 +738,28 @@ HPSe</code></pre>
 <pre class="r"><code>results</code></pre>
 <pre><code>## 
 ## JAGS model summary statistics from 20000 samples (chains = 2; adapt+burnin = 5000):
-##                                                                         
-##          Lower95   Median  Upper95     Mean       SD     Mode      MCerr
-## prev     0.41464  0.51941  0.62677  0.51956 0.054656  0.51905 0.00052794
-## prob[1]  0.34292   0.4415  0.53272  0.44154  0.04861  0.43982 0.00043894
-## prob[2]  0.04283  0.09373    0.153 0.096528 0.028745 0.088757 0.00027816
-## prob[3] 0.029338 0.059836 0.099735 0.062624 0.018744 0.056151 0.00021514
-## prob[4]  0.31145  0.39854  0.49061  0.39931 0.045832  0.39399 0.00039447
-## se[1]     0.8647  0.90931   0.9446  0.90783 0.020534   0.9118 0.00019622
-## se[2]    0.72627  0.84912  0.95501  0.84546 0.059286   0.8558 0.00059127
-## sp[1]    0.92297  0.95084  0.97514   0.9497 0.013641  0.95206 0.00013878
-## sp[2]    0.87715  0.96092        1  0.95204 0.038257  0.98106 0.00049209
-##                                         
-##         MC%ofSD SSeff       AC.10   psrf
-## prev          1 10718   0.0038816 1.0004
-## prob[1]     0.9 12264 0.000092156 1.0002
-## prob[2]       1 10679 -0.00081631 1.0006
-## prob[3]     1.1  7591    0.015256 1.0002
-## prob[4]     0.9 13499   0.0050332 1.0002
-## se[1]         1 10951  -0.0059384      1
-## se[2]         1 10054 -0.00061516 1.0002
-## sp[1]         1  9661  -0.0056626 1.0001
-## sp[2]       1.3  6044    0.015822 1.0006
+##                                                                                
+##          Lower95   Median Upper95     Mean       SD     Mode      MCerr MC%ofSD
+## prev     0.41423  0.51947 0.62928  0.51908 0.055356  0.51942 0.00050969     0.9
+## prob[1]  0.34961   0.4415 0.54106  0.44167 0.049126  0.44398 0.00044855     0.9
+## prob[2] 0.044668 0.093561 0.15454 0.096203 0.028916 0.089602 0.00029016       1
+## prob[3]  0.03094 0.060204 0.10102 0.062825 0.018771 0.056262 0.00020934     1.1
+## prob[4]  0.30949  0.39842 0.48925   0.3993 0.045879   0.3975 0.00038931     0.8
+## se[1]    0.86716  0.90927 0.94525  0.90792 0.020429  0.91171  0.0001928     0.9
+## se[2]    0.72584  0.84988 0.95663  0.84626 0.059719  0.85062 0.00062047       1
+## sp[1]    0.92231  0.95078 0.97512  0.94965 0.013728  0.95325 0.00014094       1
+## sp[2]    0.87725  0.95991       1  0.95152 0.038081  0.98089 0.00047015     1.2
+##                                  
+##         SSeff       AC.10    psrf
+## prev    11795   -0.010861       1
+## prob[1] 11995  -0.0052565 0.99998
+## prob[2]  9931  -0.0091904  1.0002
+## prob[3]  8041   -0.012489 0.99997
+## prob[4] 13888  0.00069141  1.0001
+## se[1]   11228   -0.017723  1.0005
+## se[2]    9264  -0.0064278  1.0001
+## sp[1]    9488 -0.00086273  1.0002
+## sp[2]    6561   -0.011979 0.99998
 ## 
 ## Total time taken: 1.1 seconds</code></pre>
 <p>How well do we recover our parameters for test 2?</p>
@@ -818,7 +818,7 @@ qbeta(c(0.025, 0.5, 0.975), 240.03, 12.63)</code></pre>
 <div id="auto-hui-walter" class="section level2">
 <h2>Auto Hui-Walter</h2>
 <p>We would usually start with individual-level data in a dataframe:</p>
-<pre class="r"><code>se1 &lt;- 0.9; sp1 &lt;- 0.95; sp2 &lt;- 0.99; se2 &lt;- 0.8
+<pre class="r"><code>se1 &lt;- 0.9; se2 &lt;- 0.8; sp1 &lt;- 0.95; sp2 &lt;- 0.99
 prevalences &lt;- c(0.1, 0.5, 0.9)
 N &lt;- 100
 
@@ -960,58 +960,58 @@ results</code></pre>
 <tr class="odd">
 <td>se[1]</td>
 <td align="right">0.754</td>
-<td align="right">0.865</td>
-<td align="right">0.958</td>
-<td align="right">9845</td>
-<td align="right">1</td>
+<td align="right">0.867</td>
+<td align="right">0.960</td>
+<td align="right">9394</td>
+<td align="right">1.000</td>
 </tr>
 <tr class="even">
 <td>se[2]</td>
 <td align="right">0.773</td>
-<td align="right">0.896</td>
+<td align="right">0.894</td>
 <td align="right">1.000</td>
-<td align="right">6058</td>
-<td align="right">1</td>
+<td align="right">6623</td>
+<td align="right">1.001</td>
 </tr>
 <tr class="odd">
 <td>sp[1]</td>
-<td align="right">0.756</td>
-<td align="right">0.869</td>
-<td align="right">0.962</td>
-<td align="right">7403</td>
-<td align="right">1</td>
+<td align="right">0.759</td>
+<td align="right">0.870</td>
+<td align="right">0.964</td>
+<td align="right">7992</td>
+<td align="right">1.000</td>
 </tr>
 <tr class="even">
 <td>sp[2]</td>
-<td align="right">0.926</td>
-<td align="right">0.983</td>
+<td align="right">0.924</td>
+<td align="right">0.982</td>
 <td align="right">1.000</td>
-<td align="right">3928</td>
-<td align="right">1</td>
+<td align="right">3557</td>
+<td align="right">1.000</td>
 </tr>
 <tr class="odd">
 <td>prev[1]</td>
 <td align="right">0.000</td>
-<td align="right">0.057</td>
-<td align="right">0.161</td>
-<td align="right">5906</td>
-<td align="right">1</td>
+<td align="right">0.056</td>
+<td align="right">0.162</td>
+<td align="right">6342</td>
+<td align="right">1.000</td>
 </tr>
 <tr class="even">
 <td>prev[2]</td>
-<td align="right">0.265</td>
+<td align="right">0.261</td>
 <td align="right">0.427</td>
-<td align="right">0.598</td>
-<td align="right">10408</td>
-<td align="right">1</td>
+<td align="right">0.594</td>
+<td align="right">11183</td>
+<td align="right">1.000</td>
 </tr>
 <tr class="odd">
 <td>prev[3]</td>
-<td align="right">0.695</td>
-<td align="right">0.850</td>
-<td align="right">0.974</td>
-<td align="right">8364</td>
-<td align="right">1</td>
+<td align="right">0.698</td>
+<td align="right">0.851</td>
+<td align="right">0.977</td>
+<td align="right">7452</td>
+<td align="right">1.000</td>
 </tr>
 <tr class="even">
 <td>covse12</td>
@@ -1098,55 +1098,55 @@ glm_results &lt;- run.jags(&#39;glm_hw.bug&#39;, n.chains=2, data=simdata)</code
 <pre><code>## Results from the HW model:</code></pre>
 <pre><code>## 
 ## JAGS model summary statistics from 20000 samples (chains = 2; adapt+burnin = 5000):
-##                                                                           
-##             Lower95   Median Upper95     Mean       SD     Mode      MCerr
-## se[1]       0.75362  0.86534 0.95753  0.86001 0.054096  0.87221  0.0005452
-## se[2]       0.77341  0.89562 0.99996  0.88819 0.062709  0.90917 0.00080567
-## sp[1]       0.75618  0.86906 0.96185  0.86482 0.053436  0.87627 0.00062107
-## sp[2]       0.92566  0.98252       1  0.97503 0.024572  0.99222 0.00039208
-## prev[1] 0.000029274 0.056609  0.1611 0.067537 0.048525 0.038475 0.00063143
-## prev[2]     0.26542  0.42727 0.59821  0.42926 0.086448  0.42339 0.00084736
-## prev[3]     0.69537  0.85047 0.97391  0.84275 0.074392  0.86892 0.00081346
-## covse12           0        0       0        0        0        0         --
-## covsp12           0        0       0        0        0        0         --
+##                                                                          
+##            Lower95   Median Upper95     Mean       SD     Mode      MCerr
+## se[1]      0.75399  0.86704 0.96021  0.86101 0.054822  0.87559 0.00056561
+## se[2]      0.77292  0.89382 0.99974  0.88669 0.062932  0.90844 0.00077332
+## sp[1]       0.7594  0.86997 0.96389  0.86537 0.053902  0.87764 0.00060294
+## sp[2]      0.92423  0.98224       1  0.97434  0.02555  0.99213 0.00042839
+## prev[1] 0.00016195 0.055758 0.16154 0.066654 0.048005 0.038856 0.00060281
+## prev[2]    0.26109  0.42665  0.5936  0.42849 0.086008  0.42613 0.00081331
+## prev[3]    0.69827  0.85065 0.97736  0.84288 0.074328  0.86497   0.000861
+## covse12          0        0       0        0        0        0         --
+## covsp12          0        0       0        0        0        0         --
 ##                                         
-##         MC%ofSD SSeff       AC.10   psrf
-## se[1]         1  9845 -0.00028924 1.0001
-## se[2]       1.3  6058    0.011045 1.0002
-## sp[1]       1.2  7403    0.011622      1
-## sp[2]       1.6  3928    0.034015 1.0003
-## prev[1]     1.3  5906    0.021416 1.0002
-## prev[2]       1 10408   0.0079417 1.0003
-## prev[3]     1.1  8364  -0.0013036 1.0001
-## covse12      --    --          --     --
-## covsp12      --    --          --     --
+##         MC%ofSD SSeff      AC.10    psrf
+## se[1]         1  9394   0.011004  1.0005
+## se[2]       1.2  6623 0.00014721  1.0005
+## sp[1]       1.1  7992 -0.0054791       1
+## sp[2]       1.7  3557   0.039847  1.0004
+## prev[1]     1.3  6342  0.0037583 0.99998
+## prev[2]     0.9 11183 -0.0022613  1.0002
+## prev[3]     1.2  7452  -0.010262       1
+## covse12      --    --         --      --
+## covsp12      --    --         --      --
 ## 
-## Total time taken: 1.4 seconds</code></pre>
+## Total time taken: 1.5 seconds</code></pre>
 <pre><code>## Results from the GLM model:</code></pre>
 <pre><code>## 
 ## JAGS model summary statistics from 20000 samples (chains = 2; adapt+burnin = 5000):
 ##                                                                      
 ##                      Lower95  Median Upper95    Mean       SD    Mode
-## intercept            -3.7433 -2.3826  -1.186 -2.4246  0.66153 -2.3174
+## intercept            -3.8529 -2.4135 -1.1594 -2.4543  0.68438 -2.3919
 ## population_effect[1]       0       0       0       0        0       0
-## population_effect[2] 0.66025  2.0639  3.5001  2.0937  0.72721  2.0341
-## population_effect[3]  2.6105  4.3386  6.3345  4.4157  0.99018  4.2809
-## se[1]                  0.746  0.8622 0.95308 0.85648 0.055081 0.87008
-## se[2]                0.75731 0.88514  0.9998 0.87789 0.066048 0.89623
-## sp[1]                0.76077 0.87499 0.96872 0.87053 0.054119 0.88216
-## sp[2]                0.92897 0.98279       1 0.97579 0.023332 0.99232
-##                                                                 
-##                           MCerr MC%ofSD SSeff      AC.10    psrf
-## intercept              0.018095     2.7  1337    0.25906  1.0051
-## population_effect[1]         --      --    --         --      --
-## population_effect[2]   0.018963     2.6  1471    0.24309  1.0044
-## population_effect[3]   0.020453     2.1  2344    0.14213  1.0012
-## se[1]                0.00058084     1.1  8993   0.016599  1.0001
-## se[2]                0.00083603     1.3  6241 -0.0028205 0.99995
-## sp[1]                0.00062278     1.2  7551  0.0032391  1.0001
-## sp[2]                0.00036747     1.6  4031  0.0090495  1.0003
+## population_effect[2] 0.68892  2.1002  3.6366   2.126  0.75761  2.0687
+## population_effect[3]  2.5949  4.3579  6.4013  4.4314  0.98463  4.2339
+## se[1]                0.75176 0.86356 0.95593  0.8581 0.054527 0.87616
+## se[2]                0.75892 0.88574 0.99998 0.87885 0.065696 0.89585
+## sp[1]                0.76118 0.87468 0.96813 0.87021 0.054063 0.88141
+## sp[2]                0.92872  0.9835       1 0.97628 0.023265 0.99259
+##                                                                  
+##                           MCerr MC%ofSD SSeff       AC.10    psrf
+## intercept              0.019304     2.8  1257     0.29566  1.0039
+## population_effect[1]         --      --    --          --      --
+## population_effect[2]   0.020968     2.8  1305     0.28358  1.0032
+## population_effect[3]   0.021259     2.2  2145     0.15102   1.001
+## se[1]                0.00055188       1  9762  -0.0060738  1.0003
+## se[2]                0.00083356     1.3  6212   0.0053188 0.99995
+## sp[1]                0.00061936     1.1  7619 0.000039412  1.0001
+## sp[2]                0.00036462     1.6  4071     0.02506  1.0006
 ## 
-## Total time taken: 5.7 seconds</code></pre>
+## Total time taken: 5.9 seconds</code></pre>
 <p>Note: this model could be used as the basis for adding covariates</p>
 <p>For a handy way to generate a GLM model see runjags::template.jags</p>
 <ul>
